fix UnitTest